--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,87 @@
 <section class="selector">
 	<div class="selector__container">
 		<ul class="selector__container-ul">
-			<li class="selector__container-li">C#</li>
+			<li class="selector__container-li">C++
+				<ul class="container__ul-php">
+					<li class="container__li-php">
+					Введение
+					<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Что такое C++?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Типы данных, массивы</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Условные операторы и циклы</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Строки в C++
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Исключения	
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Указатели и ссылки
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Структура
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							ENUM
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Работа с файлами
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Функции и их перегрузка	
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Математические функции
+							</a>
+							</li>
+							</ul>
+					</li>
+					<li class="container__li-php">
+					Введение в ООП
+					<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Что такое ООП?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Классы и объекты
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Конструкторы и диструкторы
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Дружественные функции
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Дружественные классы	
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Указатель this
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Наследование классов
+							</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							Шаблоны функций и классов
+							</a>
+							</li>
+							</ul>
+					</li>
+				</ul>
 			<li class="selector__container-li">JS
 				<ul class="container__ul-php">
 					<li class="container__li-php">Введение
@@ -71,11 +151,57 @@
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_kak_podluchit.html" class="container__li-php_drop">Как подключить?</a>
 							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Типы данных, массивы, функции</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Область внутренней видимости</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">BOM и DOM</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Подключение элементов сайта</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Условные операторы и циклы</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Динамическе элементы и события</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Анимации и таймеры</a>
+							</li>
 							</ul>
 					</li>
 					</li>
-					<li class="container__li-php">
-						<a  href="#" class="container__li-php">jQuery</a>
+					<li class="container__li-php">jQuery
+						<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Что такое JQuey?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Функция $() и привязка DOM</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Отбор элементов</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Манипулирование классами и стилями</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Функции html(),text() и val()</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Функция clone()</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Работа с элементами</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Обработка событий</a>
+							</li>
+
+							</ul>
+					</li>
+					<li class="container__li-php">AJAX
+						<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Что такое AJAX?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Основные функции и атрибуты</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Полный контроль</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Простая проверка логики</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">JSON</a>
+							</li>
+							</ul>
 					</li>
 				</ul>
 			</li>
@@ -94,9 +220,17 @@
 
 							</ul>
 					</li>
-					<li class="container__li-php">
-						<a class="container__li-php">Навигация	
-						</a>	
+					<li class="container__li-php">Навигация	
+						<ul class="container__ul-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Навигация сайта</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Выпадающее меню</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
+							Бургер меню
+							</a>
+							</li>
+							</ul>
 					</li>
 					<li class="container__li-php">
 						<a class="container__li-php">БЭМ</a>
@@ -112,6 +246,13 @@
 						<ul class="container__ul-php_drop">
 							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">Что такое CSS?</a>
 							</li>
+							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">
+							Flex сетка
+							</a>
+							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">
+							Перменные	 
+							</a>
+							</li>
 							</ul>
 					</li>
 					<li class="container__li-php">
@@ -124,15 +265,52 @@
 			</li>
 			<li class="selector__container-li">PHP
 				<ul class="container__ul-php">
-					<li class="container__li-php">
-						<a href="#" class="container__li-php">Введение</a>
+					<li class="container__li-php">Введение
+						<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Что такое PHP?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Установка локального сервера</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Типы данных, функции, массивы</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Условные операторы и циклы</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Обработка форм</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Математические функции</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Работа с файлами</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Создание редиректа</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">COOKIE и сессия</a>
+							</li>
+							</ul>
 					</li>
-					<li class="container__li-php">
-						<a href="#" class="container__li-php">Работа с БД</a>
+					<li class="container__li-php">Работа с БД
+						<ul class="container__ul-php_drop ">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Что такое БД?</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">phpmyadmin</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Создание БД и списка</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Отправка данных в БД</a>
+							</li>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Удаление и редактирование данных в БД</a>
+							</li>
+							</ul>
 					</li>
 				</ul>	
 			</li>
 		</ul>
+		<!-- Линия 2 -->
+	<div class="selector__container-line">
+		<ul class="selector__container-ul">
+			<li class="selector__container-li">С#</li>
+			<li class="selector__container-li">SQL</li>
+		</ul>
+	</div>
 	</div>
 </section>
 
