--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 		</a>
 		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
 	</header>
-	
+
 </section>
 <div class="menu__drop">
 			<ul class="menu__drop-ul">
@@ -78,7 +78,7 @@
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
-							Исключения	
+							Исключения
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
@@ -98,7 +98,7 @@
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
-							Функции и их перегрузка	
+							Функции и их перегрузка
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
@@ -125,7 +125,7 @@
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
-							Дружественные классы	
+							Дружественные классы
 							</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
@@ -220,9 +220,9 @@
 
 							</ul>
 					</li>
-					<li class="container__li-php">Навигация	
+					<li class="container__li-php">Навигация
 						<ul class="container__ul-php_drop">
-							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Навигация сайта</a>
+							<li class="container__li-php_drop"><a  href="blog/html_sozdanie_navigazii.html" class="container__li-php_drop">Навигация сайта</a>
 							</li>
 							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Выпадающее меню</a>
 							</li>
@@ -250,7 +250,7 @@
 							Flex сетка
 							</a>
 							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">
-							Перменные	 
+							Перменные
 							</a>
 							</li>
 							</ul>
@@ -301,7 +301,7 @@
 							</li>
 							</ul>
 					</li>
-				</ul>	
+				</ul>
 			</li>
 		</ul>
 		<!-- Линия 2 -->
@@ -336,7 +336,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Контакты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="https://s2d1ent.github.io/LazyCote/">WebSite</a>
 				</li>
@@ -351,7 +351,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Меню</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="index.html">Главное</a>
 				</li>
@@ -366,11 +366,11 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter">Проекты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
 				</li>
-				
+
 			</ul>
 		</div>
 	</div>
