css_flexbox.html

--- a/blog.html
+++ b/blog.html
@@ -246,8 +246,8 @@
 						<ul class="container__ul-php_drop">
 							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">Что такое CSS?</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">
-							Flex сетка
+							<li class="container__li-php_drop"><a  href="blog/css_flexbox.html" class="container__li-php_drop">
+							Flexbox
 							</a>
 							<li class="container__li-php_drop"><a  href="blog/css_what_is.html" class="container__li-php_drop">
 							Перменные
