--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</a>
 		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
 	</header>
-	
+
 </section>
 <div class="menu__drop">
 			<ul class="menu__drop-ul">
@@ -67,7 +67,7 @@
 				<a  href="project.html">
 					<div class="container__block__one-big">
 						<span class="block__one__big-title">Проекты</span>
-						<img src="src/projectm.jpg" class="block__big-img"> 
+						<img src="src/projectm.jpg" class="block__big-img">
 					</div>
 				</a>
 				<div class="container__block__one-biglittle">
@@ -75,20 +75,20 @@
 						<a  href="news/redesign.html">
 							<div class="container__block__one-little orange ">
 								<span class="center-pal">Редизайн</span>
-								<img src="src/redesign.jpg" class="block__little-img"> 
+								<img src="src/redesign.jpg" class="block__little-img">
 							</div>
 						</a>
 						<a  href="minigames.html">
 							<div class="container__block__one-little purple ">
 								<span class="center-pal">Мини-игры</span>
-								<img src="src/minigamesm.jpg" class="block__little-img"> 	
+								<img src="src/minigamesm.jpg" class="block__little-img">
 							</div>
 						</a>
 					</div>
 					<div class="container__block__one-biglittletwo">
-						<a  href="blog/html_bloki_tegi_i_ih_svyazka.html">
-							<div class="container__block__one-little light-green "><span class="center-pal">Блоки,теги и их связка</span>
-							<img src="src/articlem.jpg" class="block__little-img">
+						<a  href="blog/css_flexbox.html">
+							<div class="container__block__one-little light-green "><span class="center-pal">Flexbox</span>
+							<img src="src/article_cssm.jpg" class="block__little-img">
 						</div>
 						</a>
 						<a  href="blog/html_sozdanie_form.html">
@@ -118,20 +118,20 @@
 						<a  href="game/oleg.html">
 							<div class="container__block__one-little red-orange  ">
 								<span class="center-pal">OLEG</span>
-								<img src="src/olegm.jpg" class="block__little-img"> 
+								<img src="src/olegm.jpg" class="block__little-img">
 							</div>
 						</a>
 						<a  href="news.html">
 							<div class="container__block__one-little orange ">
 								<span class="center-pal">Новости</span>
-								<img src="src/newsm.jpg" class="block__little-img"> 	
+								<img src="src/newsm.jpg" class="block__little-img">
 							</div>
 						</a>
 					</div>
 				</div>
 				<a  href="blog.html"><div class="container__block__one-big">
 					<span class="block__one__big-title">Блог</span>
-					<img src="src/blogm.jpg" class="block__big-img"> 	
+					<img src="src/blogm.jpg" class="block__big-img">
 				</div>
 				</a>
 			</div>
@@ -221,7 +221,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Контакты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="https://s2d1ent.github.io/LazyCote/">WebSite</a>
 				</li>
@@ -236,7 +236,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Меню</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="index.html">Главная</a>
 				</li>
@@ -251,11 +251,11 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter">Проекты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
 				</li>
-				
+
 			</ul>
 		</div>
 	</div>
