add_jquery+go_adsense

--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<script data-ad-client="ca-pub-6725342082633367" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>LazyCote team</title>
-
+<script type="text/javascript" src="scripts/jquery.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 <script type="text/javascript" src="scripts/jquery.js"></script>
