--- a/blog__layouts.html
+++ b/blog__layouts.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<script data-ad-client="ca-pub-6725342082633367" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>LazyCote team</title>
-
+<script type="text/javascript" src="scripts/jquery.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
@@ -39,7 +38,7 @@
 </section>
 
 <section class="headertwo">
-	<div class="headertwo__container">	
+	<div class="headertwo__container">
 			<div class="container__banner">
 			<div class="banner__container">
 				<img src="src/article.jpg" class="banner__container-img">
@@ -50,8 +49,8 @@
 				<div class="description__text">	Здарова народ, сегодня был закончен редизайн сайта. Так как сайт максимально убого выглядел, мы решили его подкорректировать и сделать минималистичным и более каким-то, нормальным что ли. Редизайн сайта сделан на данный момент только под ПК версию сайта, поэтому с версией под телефоны придется временно подождать, так как под пк делалася не адаптивная, а масштабируемая верстка, придется немного помучаться с версткой под телефон.<br><br>
 					Так же мы возвращаемся к работе. В скоре мы приступим к доделыванию нашего проекта<a href="../game/oleg.html" style="color: #fff; text-decoration: underline;">OLEG</a>. И надеемся, что в скоре мы его завершим. По выходу игры мы собираемся игру дорабатывать дальше, так как нужно будет добавлять новые уровни, чтобы игра была не короткой.<br><br>
 				</div>
-			</div>		
-		
+			</div>
+
 	</div>
 </section>
 
@@ -70,7 +69,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Контакты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="https://s2d1ent.github.io/LazyCote/">WebSite</a>
 				</li>
@@ -85,7 +84,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Меню</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="index.html">Главное</a>
 				</li>
@@ -100,11 +99,11 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter">Проекты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
 				</li>
-				
+
 			</ul>
 		</div>
 	</div>
