--- a/game/oleg.html
+++ b/game/oleg.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<title>LazyCote team</title>
-
+<script type="text/javascript" src="../scripts/jquery.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
