--- a/minigames.html
+++ b/minigames.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<script data-ad-client="ca-pub-6725342082633367" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>LazyCote team</title>
-
+<script type="text/javascript" src="scripts/jquery.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
@@ -49,7 +48,7 @@
 		</a>
 		<svg height="100%" class="burger" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 24 24" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon"><path d="M4,6.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,12.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/><path d="M4,18.75l16,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75l-16,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75Z"/></g></svg>
 	</header>
-	
+
 </section>
 <div class="menu__drop">
 			<ul class="menu__drop-ul">
@@ -60,7 +59,7 @@
 </div>
 
 <section class="headertwo">
-	<div class="headertwo__container">	
+	<div class="headertwo__container">
 		<div class="headertwo__container-discription">
 		На этой странице представленны мини игры созданные членами нашей команды чтобы вы не скучали. Каждая игра, создавалась одним разработчиком.
 		</div>
@@ -88,7 +87,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Контакты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="https://s2d1ent.github.io/LazyCote/">WebSite</a>
 				</li>
@@ -103,7 +102,7 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter" >Меню</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="index.html">Главное</a>
 				</li>
@@ -118,11 +117,11 @@
 			<ul class="footer__container__menu-ul">
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li contfooter">Проекты</a>
-				</li>	
+				</li>
 				<li class="footer__container__menu-li">
 					<a class="footer__container__menu-li" href="game/oleg.html">OLEG</a>
 				</li>
-				
+
 			</ul>
 		</div>
 	</div>
