--- a/blog.html
+++ b/blog.html
@@ -66,41 +66,41 @@
 					<li class="container__li-php">
 					Введение
 					<ul class="container__ul-php_drop ">
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Что такое C++?</a>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Что такое C++?</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Типы данных, массивы</a>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Типы данных, массивы</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">Условные операторы и циклы</a>
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">Условные операторы и циклы</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Строки в C++
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Исключения
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Указатели и ссылки
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Структура
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							ENUM
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Работа с файлами
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Функции и их перегрузка
 							</a>
 							</li>
-							<li class="container__li-php_drop"><a  href="blog/js_what_is.html" class="container__li-php_drop">
+							<li class="container__li-php_drop"><a  href="#" class="container__li-php_drop">
 							Математические функции
 							</a>
 							</li>
