--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 			<div class="container__block-one">
 				<div class="container__block__one-biglittle">
 					<div class="container__block__one-biglittleone">
-						<a  href="blog/js_kak_podluchit.html">
-							<div class="container__block__one-little green "><span class="center-pal">Как подключить JS ?</span>
+						<a  href="blog\js_tipy_dannyh_massivy_funcii.html">
+							<div class="container__block__one-little green "><span class="center-pal">Типы данных</span>
 							<img src="src/article_jsm.jpg" class="block__little-img">
 							</div>
 						</a>
