--- a/project.html
+++ b/project.html
@@ -86,6 +86,29 @@
 					<img src="src/ANDROID_icon-icons.com_62660w.png" class="description__platform-icon">
 				</div>
 	</div>
+	<div class="line__container-blockone purple">
+		<a href="https://lazycote.github.io/foodcalcinfo" class="line__container__blockone-circle-link">
+			<img src="src/cube.png" class="line__container__blockone-circle"></img>
+		<div class="line__container-blockone-title">FoodCalc</div>
+		<div class="line__container-blockone-subtitle">App</div></a>
+		<div class="line__container-blockone-description ">
+			<ul class="line__container-blockone-description-ul">
+
+				<li class="line__container-blockone-description-li">Язык:</li>
+				<li class="line__container-blockone-description-li">Дата релиза:</li>
+				<li class="line__container-blockone-description-li">Стоимость:</li>
+			</ul>
+			<ul class="line__container-blockone-description-ul">
+
+				<li class="line__container-blockone-description-li2">Java</li>
+				<li class="line__container-blockone-description-li2">**.**.2020</li>
+				<li class="line__container-blockone-description-li2">Бесплатно</li>
+			</ul>
+		</div>
+		<div class="line__container-blockone-description-icon ">
+				<img src="src/ANDROID_icon-icons.com_62660w.png" class="description__platform-icon">
+			</div>
+</div>
 </section>
 
 <footer class="footer">
