--- a/redesign/index.html
+++ b/redesign/index.html
@@ -63,7 +63,7 @@
   </div>
 </section>
 <section class="projects">
-  <div class="projects__waveWrapper">
+
     <svg class="wave__header" height="320" viewBox="0 0 1920 320" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g filter="url(#filter0_d)">
     <path d="M0 160L45.7333 176C91.4667 192 182.667 224 274.667 208C365.733 192 457.333 128 548 133.3C640 139 732 213 822.667 245.3C914.267 277 1005.33 267 1097.33 266.7C1188.53 267 1280 277 1372 240C1462.8 203 1554.67 117 1645.33 112C1737.2 107 1828 181 1874.67 218.7L1920 256V0H1874.27C1828.53 0 1737.33 0 1645.33 0C1554.27 0 1462.67 0 1372 0C1280 0 1188 0 1097.33 0C1005.73 0 914.667 0 822.667 0C731.467 0 640 0 548 0C457.2 0 365.333 0 274.667 0C182.8 0 92 0 45.3333 0H0V160Z" fill="white"/>
@@ -80,10 +80,12 @@
     </filter>
     </defs>
     </svg>
-  </div>
+
   <div class="projects__container">
     <div class="projects__container-tile">
-      <div class="projects__tile-img"></div>
+      <div class="projects__tile-img">
+        <img src="src/banner_one.png" class="tile__img-banner">
+      </div>
       <div class="projects__tile-text">
         <div class="projects__tile-title">
           FoodyCalc
@@ -99,8 +101,11 @@
         </div>
       </div>
     </div>
-    <div class="projects__container-tileTwo">
-      <div class="projects__tile-textTwo">
+    <div class="projects__container-tile">
+      <div class="projects__tile-img">
+        <img src="src/banner_one.png" class="tile__img-banner">
+      </div>
+      <div class="projects__tile-textSecond">
         <div class="projects__tile-title">
           FoodyCalc
         </div>
@@ -114,7 +119,6 @@
           Узнать больше
         </div>
       </div>
-      <div class="projects__tile-imgTwo"></div>
     </div>
   </div>
 </section>
