--- a/redesign/index.html
+++ b/redesign/index.html
@@ -6,8 +6,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="style/header_footer.css">
   <link rel="stylesheet" href="style/index.css">
   <link rel="stylesheet" href="style/index_mobile.css">
+
   <link rel="shortcut icon" href="src/favicon.png">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,23 +25,23 @@
     </div>
     <ul class="header__container-menu">
       <li class="header__menu-items">
-      <a href="">  Главная </a>
+      <a href="index.html">  Главная </a>
         <div class="menu__items-underline"></div>
       </li>
       <li class="header__menu-items">
-      <a href="">  Проекты </a>
+      <a href="project.html">  Проекты </a>
         <div class="menu__items-underline"></div>
       </li>
       <li class="header__menu-items">
-      <a href="">  Команда </a>
+      <a href="team.html">  Команда </a>
         <div class="menu__items-underline"></div>
       </li>
       <li class="header__menu-items">
-      <a href="">  Достижения </a>
+      <a href="awords.html">  Достижения </a>
         <div class="menu__items-underline"></div>
       </li>
       <li class="header__menu-items signin">
-      <a href="">  Войти </a>
+      <a href="signin.html">  Войти </a>
         <div class="menu__items-underline"></div>
       </li>
     </ul>
