--- a/redesign/index.html
+++ b/redesign/index.html
@@ -21,7 +21,7 @@
   </div>
   <header class="header__container">
     <div class="header__container-logo">
-      <img src="src/LazyCote_logo_black.png" class="header__logo-img">
+      <a href="https://lazycote.github.io/"><img src="src/LazyCote_logo_black.png" class="header__logo-img"></a>
     </div>
     <ul class="header__container-menu">
       <li class="header__menu-items">
