--- a/redesign/project.html
+++ b/redesign/project.html
@@ -39,7 +39,7 @@
   </div>
   <header class="header__container">
     <div class="header__container-logo">
-      <img src="src/LazyCote_logo_black.png" class="header__logo-img">
+      <a href="https://lazycote.github.io/"><img src="src/LazyCote_logo_black.png" class="header__logo-img"></a>
     </div>
     <ul class="header__container-menu">
       <li class="header__menu-items">
@@ -67,78 +67,6 @@
 </section>
 <section class="tile">
   <div class="tile__container">
-    <div class="tile__container-block">
-      <div class="tile__block-banner">
-        <img src="src/LazyCote_banner_projects-FoodyCalc.png" class="tile-banner">
-      </div>
-      <div class="tile__block-description">
-        <ul class="tile__block_description-ul">
-          <li class="ul-title">Описание</li>
-          <li class="ul-items">
-            Foodcalc - это калькулятор калорий, которые человек должен потреблять в течении дня. Разнообразное количество рецептов, общение с пользователями, упражнения на разные группы мышц. Статистика для вашего похудения.
-          </li>
-          <li class="ul-title">Разработчик</li>
-          <li class="ul-items">
-            HevGon
-          </li>
-          <li class="ul-title">Доп.материалы</li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  GoogleAppLink</a>
-          </li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  GoogleDevProfile</a>
-          </li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  DeveloperLinkSocial</a>
-          </li>
-        </ul>
-      </div>
-      <span class="tile__container-arrow">
-        <svg class="arrow" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <g id="Iconly/Light-Outline/Arrow---Down-2" stroke="none" stroke-width="1" fill-rule="evenodd">
-                <g id="Arrow---Down-2" transform="translate(4.000000, 7.500000)"  fill-rule="nonzero">
-                    <path d="M0.469669914,0.469669914 C0.735936477,0.203403352 1.15260016,0.1791973 1.44621165,0.397051761 L1.53033009,0.469669914 L8,6.939 L14.4696699,0.469669914 C14.7359365,0.203403352 15.1526002,0.1791973 15.4462117,0.397051761 L15.5303301,0.469669914 C15.7965966,0.735936477 15.8208027,1.15260016 15.6029482,1.44621165 L15.5303301,1.53033009 L8.53033009,8.53033009 C8.26406352,8.79659665 7.84739984,8.8208027 7.55378835,8.60294824 L7.46966991,8.53033009 L0.469669914,1.53033009 C0.176776695,1.23743687 0.176776695,0.762563133 0.469669914,0.469669914 Z" id="Stroke-1"></path>
-                </g>
-            </g>
-        </svg>
-      </span>
-    </div>
-    <div class="tile__container-block">
-      <div class="tile__block-banner">
-        <img src="src/LazyCote_banner_projects-FoodyCalc.png" class="tile-banner">
-      </div>
-      <div class="tile__block-description">
-        <ul class="tile__block_description-ul">
-          <li class="ul-title">Описание</li>
-          <li class="ul-items">
-            Foodcalc - это калькулятор калорий, которые человек должен потреблять в течении дня. Разнообразное количество рецептов, общение с пользователями, упражнения на разные группы мышц. Статистика для вашего похудения.
-          </li>
-          <li class="ul-title">Разработчик</li>
-          <li class="ul-items">
-            HevGon
-          </li>
-          <li class="ul-title">Доп.материалы</li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  GoogleAppLink</a>
-          </li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  GoogleDevProfile</a>
-          </li>
-          <li class="ul-items">
-          <a href="#" target="_blank">  DeveloperLinkSocial</a>
-          </li>
-        </ul>
-      </div>
-      <span class="tile__container-arrow">
-        <svg class="arrow" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <g id="Iconly/Light-Outline/Arrow---Down-2" stroke="none" stroke-width="1" fill-rule="evenodd">
-                <g id="Arrow---Down-2" transform="translate(4.000000, 7.500000)"  fill-rule="nonzero">
-                    <path d="M0.469669914,0.469669914 C0.735936477,0.203403352 1.15260016,0.1791973 1.44621165,0.397051761 L1.53033009,0.469669914 L8,6.939 L14.4696699,0.469669914 C14.7359365,0.203403352 15.1526002,0.1791973 15.4462117,0.397051761 L15.5303301,0.469669914 C15.7965966,0.735936477 15.8208027,1.15260016 15.6029482,1.44621165 L15.5303301,1.53033009 L8.53033009,8.53033009 C8.26406352,8.79659665 7.84739984,8.8208027 7.55378835,8.60294824 L7.46966991,8.53033009 L0.469669914,1.53033009 C0.176776695,1.23743687 0.176776695,0.762563133 0.469669914,0.469669914 Z" id="Stroke-1"></path>
-                </g>
-            </g>
-        </svg>
-      </span>
-    </div>
     <div class="tile__container-block">
       <div class="tile__block-banner">
         <img src="src/LazyCote_banner_projects-FoodyCalc.png" class="tile-banner">
