--- a/redesign/project.html
+++ b/redesign/project.html
@@ -54,10 +54,6 @@
       <a href="team.html">  Команда </a>
         <div class="menu__items-underline"></div>
       </li>
-      <li class="header__menu-items">
-      <a href="awords.html">  Достижения </a>
-        <div class="menu__items-underline"></div>
-      </li>
       <li class="header__menu-items signin">
       <a href="signin.html">  Войти </a>
         <div class="menu__items-underline"></div>
@@ -161,19 +157,19 @@
           Проекты
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="lern">
             LazyCote Lern
             <div class="menu__items-underline"></div>
           </a>
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="workspace">
             LazyCote WorkSpace
             <div class="menu__items-underline"></div>
           </a>
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="forum">
             LazyCote Forum
             <div class="menu__items-underline"></div>
           </a>
