--- a/redesign/awords.html
+++ b/redesign/awords.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style/header_footer.css">
-    <link rel="stylesheet" href="style/team.css">
-    <link rel="stylesheet" href="style/team_mobile.css">
+    <link rel="stylesheet" href="style/awords.css">
+    <link rel="stylesheet" href="style/awords_mobile.css">
 
     <link rel="shortcut icon" href="src/favicon.png">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -17,25 +17,23 @@
   <body>
 <section class="header">
       <div class="header__wave">
-        <svg class="header__wave-svg" height="320" viewBox="0 0 1920 320" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0)" filter="url(#filter0_d)">
-        <path d="M0 192L64 170.7C128 149 256 107 384 112C512 117 640 171 768 170.7C896 171 1024 117 1152 128C1280 139 1408 213 1536 240C1664 267 1792 245 1856 234.7L1920 224V0H1856C1792 0 1664 0 1536 0C1408 0 1280 0 1152 0C1024 0 896 0 768 0C640 0 512 0 384 0C256 0 128 0 64 0H0V192Z" fill="white"/>
+        <svg class="header__wave-svg" height="325" viewBox="0 0 1920 325" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g filter="url(#filter0_d)">
+        <path d="M0 69L64 63.7C128 58 256 48 384 58.3C512 69 640 101 768 117C896 133 1024 133 1152 127.7C1280 122 1408 112 1536 133C1664 154 1792 208 1856 234.3L1920 261V5H1856C1792 5 1664 5 1536 5C1408 5 1280 5 1152 5C1024 5 896 5 768 5C640 5 512 5 384 5C256 5 128 5 64 5H0V69Z" fill="white"/>
         </g>
         <defs>
-        <filter id="filter0_d" x="-15" y="-9" width="1950" height="350" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+        <filter id="filter0_d" x="-15" y="0" width="1950" height="350" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
         <feFlood flood-opacity="0" result="BackgroundImageFix"/>
         <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
-        <feOffset dy="6"/>
+        <feOffset dy="10"/>
         <feGaussianBlur stdDeviation="7.5"/>
-        <feColorMatrix type="matrix" values="0 0 0 0 0.968627 0 0 0 0 0.666667 0 0 0 0 0.666667 0 0 0 0.5 0"/>
+        <feColorMatrix type="matrix" values="0 0 0 0 0.763294 0 0 0 0 0.666667 0 0 0 0 0.968627 0 0 0 0.45 0"/>
         <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
         <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
         </filter>
-        <clipPath id="clip0">
-        <rect width="1920" height="320" fill="white" transform="translate(1920 320) rotate(-180)"/>
-        </clipPath>
         </defs>
         </svg>
+
       </div>
       <header class="header__container">
         <div class="header__container-logo">
@@ -54,6 +52,10 @@
           <a href="team.html">  Команда </a>
             <div class="menu__items-underline"></div>
           </li>
+          <li class="header__menu-items">
+          <a href="awords.html">  Достижения </a>
+            <div class="menu__items-underline"></div>
+          </li>
           <li class="header__menu-items signin">
           <a href="signin.html">  Войти </a>
             <div class="menu__items-underline"></div>
@@ -61,85 +63,27 @@
         </ul>
 </header>
 </section>
-<section class="team">
-  <div class="team__container">
-    <div class="team__container-block">
-      <div class="team__block-banner">
-        <img src="src/LazyCote_banner_team-s2d1ent1.png" class="banner" alt="s2d1ent">
+<section class="aword">
+  <div class="aword__container">
+    <div class="aword__container-block">
+      <div class="aword__block-banner">
+        <img src="src/LazyCote_banner_awords-DataArt.png" class="banner" alt="s2d1ent">
       </div>
-      <div class="team__block-description">
+      <div class="aword__block-description">
         <ul class="description__list">
-          <li class="description__list-title">Тип разработки</li>
-          <li class="description__list-items">Web-Dev</li>
-          <li class="description__list-title">Языки</li>
-          <li class="description__list-items">HTML, CSS, JS + JQUERY, C# + WPF(Low)</li>
-          <li class="description__list-title">Контакты</li>
-          <li class="description__list-items">
-            <a href="https://vk.com/vornfrosti" target="_blank">
-              VK
-            </a>
-          </li>
-          <li class="description__list-items">
-            <a href="https://github.com/s2d1ent" target="_blank">
-              GitHub
-            </a>
-          </li>
-          <li class="description__list-items">tumenev33@mail.ru</li>
+          <li class="description__list-title">Конкурс</li>
+          <li class="description__list-items">DataArt ITPlanet</li>
+          <li class="description__list-title">Описание</li>
+          <li class="description__list-items">Для интересующихся IT и изучающих языки программирования</li>
+          <li class="description__list-title">Участник(-и)</li>
+          <li class="description__list-items">S2D1ENT</li>
+          <li class="description__list-title">Занятые места</li>
+          <li class="description__list-items">Отсутствуют</li>
+          <li class="description__list-title">Призовые</li>
+          <li class="description__list-items">Отсутствуют</li>
         </ul>
       </div>
     </div>
-    <div class="team__container-block">
-      <div class="team__block-banner">
-        <img src="src/LazyCote_banner_team-mysmallprince.png" class="banner" alt="mysmallprince">
-      </div>
-      <div class="team__block-description">
-        <ul class="description__list">
-          <li class="description__list-title">Тип разработки</li>
-          <li class="description__list-items">Application-Dev</li>
-          <li class="description__list-title">Языки</li>
-          <li class="description__list-items">C# + WinForms + WPF, Unity C#</li>
-          <li class="description__list-title">Контакты</li>
-          <li class="description__list-items">
-            <a href="https://vk.com/remurutemp" target="_blank">
-              VK
-            </a>
-          </li>
-          <li class="description__list-items">
-            <a href="https://github.com/mysmallprince" target="_blank">
-              GitHub
-            </a>
-          </li>
-          <li class="description__list-items">Email none</li>
-        </ul>
-      </div>
-    </div>
-    <div class="team__container-block">
-      <div class="team__block-banner">
-        <img src="src/LazyCote_banner_team-hevgon.png" class="banner" alt="hevgon">
-      </div>
-      <div class="team__block-description">
-        <ul class="description__list">
-          <li class="description__list-title">Тип разработки</li>
-          <li class="description__list-items">Application-Dev</li>
-          <li class="description__list-title">Языки</li>
-          <li class="description__list-items">C# + WinForms, Unity C#, Java </li>
-          <li class="description__list-title">Контакты</li>
-          <li class="description__list-items">
-            <a href="https://vk.com/maksimkhg" target="_blank">
-              VK
-            </a>
-          </li>
-          <li class="description__list-items">
-            <a href="#" target="_blank">
-              GitHub
-            </a>
-          </li>
-          <li class="description__list-items">Email NONE</li>
-        </ul>
-      </div>
-    </div>
-
-
   </div>
 </section>
 <section class="footer">
@@ -198,19 +142,19 @@
               Проекты
             </li>
             <li class="footer__menu-items">
-              <a href="#" target="_blank" class="footer__items-a" id="lern">
+              <a href="#" target="_blank" class="footer__items-a">
                 LazyCote Lern
                 <div class="menu__items-underline"></div>
               </a>
             </li>
             <li class="footer__menu-items">
-              <a href="#" target="_blank" class="footer__items-a" id="workspace">
+              <a href="#" target="_blank" class="footer__items-a">
                 LazyCote WorkSpace
                 <div class="menu__items-underline"></div>
               </a>
             </li>
             <li class="footer__menu-items">
-              <a href="#" target="_blank" class="footer__items-a" id="forum">
+              <a href="#" target="_blank" class="footer__items-a">
                 LazyCote Forum
                 <div class="menu__items-underline"></div>
               </a>
