--- a/redesign/index.html
+++ b/redesign/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="style/index.css">
   <link rel="stylesheet" href="style/index_mobile.css">
 
+  <script type="text/javascript" src="firebase/firebase-app.js"></script>
+  <script type="text/javascript" src="firebase/firebase-analytics.js"></script>
+  <script type="text/javascript" src="firebase/firebase-database.js"></script>
+  <script type="text/javascript" src="firebase/firebase-storage.js"></script>
+
   <link rel="shortcut icon" href="src/favicon.png">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,10 +39,6 @@
       </li>
       <li class="header__menu-items">
       <a href="team.html">  Команда </a>
-        <div class="menu__items-underline"></div>
-      </li>
-      <li class="header__menu-items">
-      <a href="awords.html">  Достижения </a>
         <div class="menu__items-underline"></div>
       </li>
       <li class="header__menu-items signin">
@@ -217,19 +218,19 @@
           Проекты
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="lern">
             LazyCote Lern
             <div class="menu__items-underline"></div>
           </a>
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="workspace">
             LazyCote WorkSpace
             <div class="menu__items-underline"></div>
           </a>
         </li>
         <li class="footer__menu-items">
-          <a href="#" target="_blank" class="footer__items-a">
+          <a href="#" target="_blank" class="footer__items-a" id="forum">
             LazyCote Forum
             <div class="menu__items-underline"></div>
           </a>
@@ -238,5 +239,7 @@
     </div>
   </div>
 </section>
+<script type="text/javascript" src="firebase/Y29uZmln.js"></script>
+<script type="text/javascript" src="scripts/news_slider.js"></script>
   </body>
 </html>
